# macos-dev-organizer

./: .gitignore  README.md  pyproject.toml
devradar/: __init__.py  config.py  database.py  llm.py  main.py  models.py  opener.py  watcher.py
devradar/scanner/: __init__.py  base.py  docker_scanner.py  extension_scanner.py  git_scanner.py  node_scanner.py  python_scanner.py  readme_scanner.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/legal/de/: datenschutz.md  lizenz.md
frontend/src/: App.svelte  app.css  main.ts
frontend/src/components/: AskHistory.svelte  AskPanel.svelte  FilterSidebar.svelte  InfoOverlay.svelte  InfoView.svelte  ProjectCard.svelte  ProjectDetailView.svelte  ProjectListItem.svelte  SearchBar.svelte  SettingsView.svelte  StatsBar.svelte
frontend/src/lib/: api.ts  router.ts  types.ts
frontend/src/routes/: Dashboard.svelte
support/: bump-version.sh  de.alpha.devradar.plist  install.sh
